--- a/secure-doc-sharing/package.json
+++ b/secure-doc-sharing/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@aws-amplify/ui-react": "^6.5.5",
     "aws-amplify": "^6.8.0",
+    "axios": "^1.7.7",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.27.0"
