--- a/secure-doc-sharing/package.json
+++ b/secure-doc-sharing/package.json
@@ -11,6 +11,10 @@
   },
   "dependencies": {
     "@aws-amplify/ui-react": "^6.5.5",
+    "@emotion/react": "^11.13.3",
+    "@emotion/styled": "^11.13.0",
+    "@mui/icons-material": "^6.1.6",
+    "@mui/material": "^6.1.6",
     "aws-amplify": "^6.8.0",
     "axios": "^1.7.7",
     "react": "^18.3.1",
